--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
 <footer>
-	<p><b>Galaxy Shoes ® 2023</b><br>Гетьманенко Андрій</p>
+	<p><b>Galaxy Shoes ® 2023.</b><br>Гетьманенко Андрій</p>
 </footer>
 
 </body>
